# keepass-db

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  TODO.md  TODO.txt  crates.js  database-notes.txt  help.html  index.html  search-index.js  settings.html  source-files.js
.devcontainer/: setup.sh
addr2line/: index.html  struct.Context.html
aho_corasick/: enum.AhoCorasickKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.PatternID.html  struct.Span.html
anstream/: all.html  fn.stderr.html  fn.stdout.html  index.html  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.IsTerminal.html  trait.Lockable.html  trait.RawStream.html
anstyle/: enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.Effects.html  struct.RgbColor.html  struct.Style.html
argon2_kdf/: all.html  enum.Algorithm.html  enum.Argon2Error.html  index.html  sidebar-items.js  struct.Hash.html  struct.Hasher.html  struct.Secret.html
argonautica/: all.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html  struct.Hasher.html  struct.Verifier.html
backtrace/: index.html  struct.BacktraceFmt.html  struct.BacktraceFrameFmt.html
base64/: all.html  constant.CRYPT.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  fn.encoded_len.html  index.html  struct.Config.html
benches/: kdf.rs
bit_vec/: trait.BitBlock.html
bitflags/: struct.Flag.html  trait.Bits.html  trait.Flags.html
chacha20/: struct.ChaCha20LegacyCore.html  struct.ChaChaCore.html  struct.XChaChaCore.html
change_case/: all.html  fn.camel_case.html  fn.captial_case.html  fn.change_case.html  fn.constant_case.html  fn.dot_case.html  fn.header_case.html  fn.lower_case.html  fn.lower_case_first.html  fn.param_case.html  fn.pascal_case.html  fn.path_case.html  fn.sentence_case.html  fn.snake_case.html  fn.swap_case.html  fn.title_case.html  fn.upper_case.html  fn.upper_case_first.html  index.html  sidebar-items.js  struct.Options.html
chrono/: all.html  enum.Month.html  enum.RoundingError.html  enum.SecondsFormat.html  enum.Weekday.html  index.html  macro.expect.html  macro.try_opt.html  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.Months.html  struct.OutOfRange.html  struct.OutOfRangeError.html  struct.ParseMonthError.html  struct.ParseWeekdayError.html  trait.Datelike.html  trait.DurationRound.html  trait.Timelike.html
cipher/: struct.OverflowError.html  struct.StreamCipherCoreWrapper.html  struct.StreamCipherError.html  trait.ArrayLength.html  trait.BlockDecrypt.html  trait.BlockDecryptMut.html  trait.BlockEncrypt.html  trait.BlockEncryptMut.html  trait.BlockSizeUser.html  trait.Counter.html  trait.SeekNum.html
clap/: all.html  enum.ColorChoice.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  sidebar-items.js  struct.Command.html  struct.Error.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html
clap_builder/: all.html  index.html  struct.Id.html
clap_lex/: index.html  struct.ArgCursor.html  struct.ParsedArg.html  struct.RawArgs.html  struct.RawOsStr.html  struct.RawOsString.html  struct.ShortFlags.html
crypto_common/: trait.BlockSizeUser.html
derive_getters/: all.html  derive.Dissolve.html  derive.Getters.html  index.html
env_logger/: constant.DEFAULT_FILTER_ENV.html  constant.DEFAULT_WRITE_STYLE_ENV.html  fn.builder.html  fn.from_env.html  fn.init.html  fn.init_from_env.html  fn.try_init.html  fn.try_init_from_env.html  index.html  struct.Builder.html  struct.Env.html  struct.Logger.html
error_chain/: all.html  index.html  macro.bail.html  macro.ensure.html  macro.error_chain.html  macro.error_chain_processed!.html  macro.error_chain_processed.html  macro.quick_error.html  macro.quick_main.html  sidebar-items.js  struct.Backtrace.html  struct.Display.html  struct.ErrorChainIter.html  trait.ChainedError.html  trait.ExitCode.html
failure/: struct.Backtrace.html  struct.Compat.html  struct.Context.html  struct.Error.html  struct.SyncFailure.html  trait.ResultExt.html
fancy_regex/: all.html  (+11 more)
kdbx_derive/: Cargo.toml  all.html  derive.KdbxParse.html  derive.KdbxSerialize.html  index.html
kdbx_derive/src/: lib.rs
keepass-db-derive/: Cargo.toml
keepass-db-derive/src/: lib.rs
(+17435 files in other folders)
