[package]
name = "kdbx"
version = "0.1.0"
authors = ["Loren M. Lang <lorenl@north-winds.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["rust-argon2"]
default = ["argonautica"]

[dependencies]
byteorder = "1.3.2"
uuid = "1.4.0"
ring = "0.16.9"
rpassword = "4.0.3"
openssl = "*"
flate2 = "1.0.13"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
base64 = "0.11.0"
chrono = "*"
hex = "0.4.0"
rust-argon2 = { version = "0.6.0", optional = true }
argonautica = { version = "*", optional = true }
chacha20 = "*"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.2"
clap = "2.33.0"
xml-rs = "0.8.0"
kdbx_derive = { path = "kdbx_derive/" }
num-derive = "0.4.0"
num-traits = "0.2.16"
salsa20 = "0.10.2"
hex-literal = "0.4.1"
derive-getters = "0.3.0"

[workspace]
members = [ "kdbx_derive" ]
