[package]
name = "kdbx"
version = "0.0.1"
authors = ["Loren M. Lang <lorenl@north-winds.org>"]
license = "MIT"
edition = "2018"
description = "KeePass password database"
#readme = "README.md"
#documentation = "https://docs.rs/kdbx"
homepage = "https://github.north-winds.org/"
repository = "https://github.com/penguin359/kdbx"
keywords = ["password"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["rust-argon2"]
default = ["argonautica"]
write = []

[dependencies]
byteorder = "1.3.2"
uuid = "1.4.0"
ring = "0.16.9"
rpassword = "4.0.3"
openssl = "*"
flate2 = "1.0.13"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
base64 = "0.11.0"
# old_time feature pulls in vulnerable time 0.1 crate
chrono = { version = "0.4.*", default-features = false, features = ["alloc", "std", "clock"] }
hex = "0.4.0"
rust-argon2 = { version = "0.6.0", optional = true }
argonautica = { version = "0.1.0", optional = true }
argon2-kdf = { version = "*", optional = true }
chacha20 = "*"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.2"
clap = "2.33.0"
xml-rs = "0.8.0"
kdbx_derive = { path = "kdbx_derive/" }
num-derive = "0.4.0"
num-traits = "0.2.16"
salsa20 = "0.10.2"
hex-literal = "0.4.1"
derive-getters = "0.3.0"
generic-array = "0.14.7"

[workspace]
members = [ "kdbx_derive" ]
