[package]
name = "keepass-db"
version = "0.0.1"
authors = ["Loren M. Lang <lorenl@north-winds.org>"]
license = "MIT"
edition = "2018"
description = "KeePass password database library and tools"
#readme = "README.md"
#documentation = "https://docs.rs/keepass-db"
homepage = "https://github.north-winds.org/keepass-db"
repository = "https://github.com/penguin359/keepass-db"
keywords = ["keepass", "kdbx", "password"]
categories = ["cryptography"]

[features]
#default = ["rust-argon2"]
default = ["argonautica"]

[dependencies]
byteorder = "1.3.2"
uuid = "1.4.0"
ring = "0.16.9"
rpassword = "4.0.3"
openssl = "*"
flate2 = "1.0.13"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
base64 = "0.11.0"
# old_time feature pulls in vulnerable time 0.1 crate
chrono = { version = "0.4.*", default-features = false, features = ["alloc", "std", "clock"] }
hex = "0.4.0"
rust-argon2 = { version = "0.6.0", optional = true }
argonautica = { version = "0.1.0", optional = true }
argon2-kdf = { version = "*", optional = true }
chacha20 = "*"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.2"
clap = "2.33.0"
xml-rs = "0.8.0"
keepass_db_derive = { version = "0.0.1", path = "keepass_db_derive/" }
num-derive = "0.4.0"
num-traits = "0.2.16"
salsa20 = "0.10.2"
hex-literal = "0.4.1"
derive-getters = "0.3.0"
generic-array = "0.14.7"

[workspace]
members = [ "keepass_db_derive" ]
