[package]
name = "kdbx_derive"
version = "0.1.0"
authors = ["Loren M. Lang <lorenl@north-winds.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
change-case = "0.2.0"
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = { version = "1.0.91", features = ["extra-traits"] }
xml-rs = "0.8.15"

[lib]
proc-macro = true
