[package]
name = "keepass-db-derive"
version = "0.0.2"
authors = ["Loren M. Lang <lorenl@north-winds.org>"]
license = "MIT"
edition = "2018"
description = "Serialization/deserialization macros for KeePass-DB"
homepage = "https://github.north-winds.org/keepass-db"
repository = "https://github.com/penguin359/keepass-db"
keywords = ["keepass", "kdbx", "password"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
change-case = "0.2.0"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.31", features = ["extra-traits"] }
xml-rs = "0.8.18"

[lib]
proc-macro = true
